# sap-config-guard

./: .dockerignore  .gitignore  AI_AGENT_METADATA.md  AI_DISCOVERABILITY.md  CONTRIBUTING.md  DOCKER.md  Dockerfile  ENHANCEMENTS.md  LICENSE  NEXT_STEPS.md  PROJECT_SUMMARY.md  PYPI_SUCCESS.md  QUICKSTART.md  QUICK_PUBLISH.md  README.md  docker-compose.yml  publish.sh  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/: CODEOWNERS  FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml
examples/: ADVANCED_USAGE.md  custom-schema.yaml
examples/config/dev/: .env  config.json  config.properties  config.yaml
examples/config/prod/: .env
examples/config/qa/: .env
sap_config_guard/: __init__.py
sap_config_guard/cli/: __init__.py  main.py
sap_config_guard/core/: __init__.py  loader.py  schema.py  validator.py
sap_config_guard/diff/: __init__.py  env_diff.py
sap_config_guard/rules/: __init__.py  sap_rules.yaml
tests/: __init__.py  test_diff.py  test_loader.py  test_validator.py
